# card-against-zyx

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  docker_compose.yaml  package-lock.json  package.json  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/scripts/: load_cards_json.ts
frontend/src/lib/: DisabledCard.svelte  DisabledHand.svelte  auth.ts  card.css  supabaseClient.ts  utils.ts
frontend/src/lib/api/: accounts.ts  axios_config.ts  (+2 more)
frontend/src/routes/: +layout.svelte  +page.svelte  styles.css
papers_versus_people/: Dockerfile  manage.py
papers_versus_people/accounts/: models.py  urls.py
papers_versus_people/accounts/migrations/: 0001_initial.py  0002_user_display_name.py
papers_versus_people/cards/: admin.py  models.py  serializers.py  viewsets.py
papers_versus_people/cards/migrations/: 0001_initial.py  0002_cardset_official_alter_card_text.py
papers_versus_people/matches/: admin.py  models.py  serializers.py  viewsets.py
papers_versus_people/matches/migrations/: 0001_initial.py  0002_match_winner_match_winning_score_and_more.py  0003_remove_match_max_rounds.py  0004_alter_match_czar_order.py  0005_alter_match_current_black_card.py
papers_versus_people/papers_versus_people/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
postgres_db/: 01.init.sh
scripts/: load_cards_json.ts
src/lib/: Alert.svelte  BlackCard.svelte  DisabledHand.svelte  Hand.svelte  WhiteCard.svelte  card.css  utils.ts
src/routes/: +page.svelte  styles.css
src/routes/join_room/: +page.svelte
(+16 files in other folders)
