[tool.poetry]
name = "paper-versus-people"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.*"
django-model-utils = "4.3.*"
psycopg2 = "2.9.*"
djangorestframework = "3.14.*"
gunicorn = "20.1.*"
django-environ = "0.10.*"
dj-database-url = "2.0.*"
whitenoise = "6.4.*"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pre-commit = "^3.1.1"
django-debug-toolbar = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
